src/popup/styles/Switch.css
.toggle-switch {
  height: 0;
  width: 0;
  visibility: hidden;
}

.switch-track {
  display: flex;
  align-items: center;
  justify-content: space-between;
  cursor: pointer;
  width: 40px;
  height: 20px;
  background: #3b3e45;
  border: 2px solid #d6d8dc;
  border-radius: 100px;
  position: relative;
  transition: 0.3s;
}

.switch-track .switch-slider {
  content: "";
  position: absolute;
  left: 2px;
  width: 13px;
  height: 13px;
  border-radius: 14px;
  transition: 0.3s;
  background-color: #d6d8dc;
}

.toggle-switch:checked + .switch-track .switch-slider {
  left: calc(100% - 2px);
  transform: translateX(-100%);
  background-color: #3b3e45;
}

.toggle-switch:checked + .switch-track {
  background-color: #d6d8dc;
}

